yaml/transformer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transformer
  template:
    metadata:
      labels:
        app: transformer
    spec:
      serviceAccountName: streamsets-transformer
      containers:
        - name: streamsets
          image: streamsets/transformer
          ports:
            - containerPort: 19630
              protocol: TCP
          volumeMounts:
            - mountPath: "/ssl"
              name: "ssl"
            - mountPath: "/streamsets"
              name: streamsets-transformer-vol
      volumes:
        - name: ssl
          secret:
            secretName: streamsets-transformer-cert
        - name: streamsets-transformer-vol
          persistentVolumeClaim:
            claimName: streamsets-transformer-pvc
