yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transformer
  labels:
    app: transformer
spec:
  type: NodePort
  ports:
    - name: http
      port: 19630
      targetPort: 19630
      protocol: TCP
  selector:
    app: transformer
